Fixed Broken CSS Links

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -108,7 +108,7 @@
                 bottom: 0;
                 width: 100%;
                 height: auto;
-                background: url(/images/bloodbag.png) no-repeat;
+                background: url(./images/bloodbag.png) no-repeat;
                 background-position: center;
                 opacity: .2;
                 z-index: -3;
@@ -264,7 +264,7 @@
                 position: relative;
             }
             .events--bg {
-                background: url(/images/volunteer.jpg) center no-repeat;
+                background: url(./images/volunteer.jpg) center no-repeat;
                 background-size: cover;
                 height: 500px;
                 width: 100%;
